fix: scrollbar disturb layout when searching blogs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,4 +31,5 @@ body {
   @apply flex flex-col;
   @apply bg-stone-100 dark:bg-stone-900;
   @apply text-black/50 dark:text-white/65;
+  @apply overflow-y-scroll
 }
